# posedetection

./: .gitignore
src-cpp/: CMakeLists.txt  detct_objDetect.cpp  detct_objDetect.h  main.cpp  test_objDetect.cpp
src-py/: main.py
test-py/: test_main.py
